# llm-trading-agents

./: .gitignore  CLAUDE.md  DECISIONS.md  FinCon_Framework_Analysis.html  FinMem_Framework_Analysis.html  MEDIUM.md  Makefile  PLAN.md  PLAN_MEDIUM.md  PROGRESS.md  README.md  config.py  features.json  project_description.md  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/agents/: doc_agent.md  generator_agent.md  planner_agent.md  reviewer_agent.md  test_writer_agent.md  verifier_agent.md
.claude/hooks/: pre-commit-check.sh
.claude/rules/: architecture.md  coding-style.md  follow-the-plan.md  git-workflow.md  llm-and-prompts.md  security-rules.md  testing-rules.md
docs/: api-patterns.md  architecture.md  database-rules.md  testing-standards.md
fixtures/: AAPL_news_sample.json  llm_responses.json  macro_news_sample.json  prices_sample.csv
notebooks/: results.ipynb
plan/S1_Data_Layer/: S11_plan_data_ingestion_and_caching.md  S12_plan_indicators_and_observation_gate.md  S13_plan_antilookahead_tests_and_fixtures.md
plan/S2_Agent_Brains/: S21_plan_llm_factory_and_mockllm.md  S22_plan_analyst_agents.md  S23_plan_debate_and_conviction.md
plan/S3_Memory_Decision_Orchestration/: S31_plan_memory_store_and_agent.md  (+2 more)
results/: report.html
src/: llm.py  main.py  schemas.py
tests/: test_agents.py  test_backtest.py  test_calibration.py  test_e2e_smoke.py  test_eval.py  test_graph.py  test_llm.py  test_loaders.py  test_memory.py  test_metrics.py  test_no_lookahead.py  test_observation.py  test_position_manager.py  test_report.py  test_smoke.py
(+33 files in other folders)
