[project]
name = "llm-trading-agents"
version = "0.0.0"
description = "Multi-agent LLM position-management system for AAPL (research/backtest)"
requires-python = ">=3.11"

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [".venv", "notebooks", "data", "fixtures"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
follow_imports = "silent"
warn_unused_ignores = false
exclude = "(^|/)(\\.venv|notebooks|data|fixtures)/"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "e2e: end-to-end / pipeline smoke tests (run by `make e2e`)",
]
filterwarnings = [
    # faiss-cpu's SWIG bindings emit these on import under Python 3.11+; third-party, not ours.
    "ignore:builtin type Swig.*has no __module__ attribute:DeprecationWarning",
]
